# OpenAI-Agent-SDK-Guide

./: .env  README.md  hello.py  pyproject.toml
00-architecture-reserch-paper/: genspark-research-document.md
01-hello-agent/: app.py
02-llm-confiuration/: app.py  readme.md
03-agent/: app.py  readme.md
04-running-agents/: app.py  readme.md
05-results/: app.py  readme.md
06-streaming/: app.py  readme.md
07-REPL-utility/: Readme.md  app.py
08-tools/: readme.md
08-tools/1-function-calling/: app.py
08-tools/2-hosted-tools/: 1_websearchtool.py  2_filesearchtool.py  4_codeinterpretertool.py
08-tools/3-custom-function-tools/: Readme.md  app.py
09-agent-as-tools/: app.py  readme.md
10-handoffs/: readme.md
10-structured-output/: app.py  readme.md
11-handoffs/: basic_handoff.py  customizing_handoffs.py  handoffs_input.py  input_filter.py  technical-guide.md
12-guardrails/: guardrail.py  input_guardrail.py  output_guardrail.py  read.md  readme.md
13-context-management/: readme.md
14-guardrails/: readme.md
14-run-lifecycle/: Readme.md
16-research-papers/: openai-research-document.md
18-architecture/: Readme.md
projects/: 03-conversations-agent.py  04-multi-agent.py  05-weather_agent.py  1-joke_agent.py  10_travel_planner_multi_agent_system.py  2-agent-with-exceptions.py  6-function-tool-agent.py  7-management_agents.py  8-invoices_parsing_agent.py  9-survey-agent.py
src/lifecycle/: README.md
src/openai_agent_sdk/: __init__.py
src/tracing/01-traces-locally/: app.py
src/tracing/02-traces-with-openai-dashboard/: 1_seting_tracing.py  (+1 more)
