[project]
name = "openai-agent-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "abdulrehman104", email = "abdulreehman104@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.2.3",
]

[project.scripts]
sdk = "openai_agent_sdk:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
